# dtepr

./: .gitignore  CMakeLists.txt  README.md
src/: directives.c  directives.h  executor.c  executor.h  main.c  processor.c  processor.h  version.c  version.h
tests/: CMakeLists.txt
tests/lib/: CMakeLists.txt
tests/lib/testdrive/: CMakeLists.txt
tests/src/: integration_tests.c  processor_helpers.h  test_directives.c  test_processor.c  tests.c
